# CoRL

./: .coverage-tmp.html  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  copy-for-aprs.sh  docker-compose-github.yml  docker-compose.yml  gen_credits.py  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.sh  requirements.dep.txt  requirements.txt  setup.cfg  setup.lock.txt  setup.py  sitemap.xml  version.py
.devcontainer/: 10_nvidia.json  bash_update.sh  devcontainer.json  startup.sh
.github/ISSUE_TEMPLATE/: build_workflow.yml  codeql.yml  make_poetry_badges.yml
.github/workflows/: build_workflow.yml  make_poetry_badges.yml  mkdocs.yml  pre-commit.yml
change_log/: index.html
concepts/: index.html
config/agents/openai_gym/: baseline_dones.yml  baseline_rewards.yml  openai_gym_agent_dict_wrapper.yml  openai_gym_agent_noop_ctrl.yml  openai_gym_agent_repeated.yml  openai_gym_agent_wrapper.yml
config/environments/openai_gym/: cartpole_v1_with_time.yml
config/experiments/: cartpole_v1.yml  cartpole_v1_benchmark.yml  cartpole_v1_dict_wrapper.yml  cartpole_v1_noop.yml  cartpole_v1_noop_ctrl.yml  cartpole_v1_random.yml  cartpole_v1_repeated_obs.yml  cartpole_v1_scripted.yml  cartpole_v1_with_duplicate_parts.yml  cartpole_v1_with_wrapper.yml  docking_1d.yml  pendulum_v1.yml
config/policy/: random_action.yml  scripted_action.yml
config/streamlit_app/: docking1d_streamlit_config.yml  pong_streamlit_config.yml
config/tasks/: ray_config.yml  rllib_config.yml  tune_config.yml
configuration/: index.html
corl/: train_rl.py
corl/agents/: base_agent.py  simple_multi_platform_agent.py
corl/dones/: done_func_base.py  done_func_dict_wrapper.py  done_func_multi_wrapper.py  done_func_wrapper.py  episode_length_done.py  gymnasium_done.py  openai_gym_done.py  sensor_bounds_check_done.py
corl/environment/: base_multi_agent_env.py  centralized_critic_environment.py  corl_gym.py  custom_env_metrics.py  default_env_rllib_callbacks.py  environment_wrappers.py  episode_artifact_callbacks.py  multi_agent_env.py  pickle_env_state.py
corl/episode_parameter_providers/: __init__.py  base_network_epp.py  core.py  incremental.py  remote.py  simple.py  tabular_parameter_provider.py
corl/evaluation/: __init__.py  api.py  api_utils.py  default_config_updates.py  episode_artifact.py  eval_logger_name.py  evaluation_artifacts.py  evaluation_factory.py  evaluation_outcome.py  scene_processors.py  serialize_platforms.py
corl/experiments/: base_experiment.py  benchmark_experiment.py  export_setup_experiment.py  rllib_experiment.py
corl/glues/: base_dict_wrapper.py  base_glue.py  base_multi_wrapper.py  base_wrapper.py
corl/libraries/: algorithm_helper.py  cleanup.py  collection_utils.py  config_file_watcher.py  context.py  env_common.py  env_func_base.py  env_space_util.py  environment_dict.py  factory.py  file_path.py  functor.py  hparam_search_util.py  nan_check.py  normalization.py  observation_extractor.py  observation_util.py  parameters.py  plugin_library.py  property.py  rllib_setup_util.py  space_transformations.py  state_dict.py  units.py  utils.py  value_function.py
corl/models/: __init__.py  centralized_critic_model.py  frame_stacking.py  torch_frame_stack.py
corl/parsers/: agent_and_platform.py  yaml_loader.py
corl/parts/: comms.py  memory_store.py
corl/policies/: base_policy.py  custom_policy.py  random_action.py  scripted_action.py
corl/rewards/: base_measurement_operation.py  episode_done.py  exponential_decay_from_target_value.py  gymnasium_reward.py  multi_measurement_operation.py  openai_gym_reward.py  reward_func_base.py  reward_func_dict_wrapper.py  reward_func_multi_wrapper.py  reward_func_wrapper.py
corl/simulators/: base_available_platforms.py  base_parts.py  base_platform.py  base_platform_type.py  base_properties.py  base_simulator.py  base_simulator_state.py  common_platform_utils.py
corl/test_utils/: full_training.py  testing_ureg_func.py
corl/visualization/: base_animator.py  docking_animator.py  episode_artifact_to_tables.py  platform_plotting_deserializer.py  plotly_animator.py  pong_animator.py
credits/: index.html
css/: material.css  style.css
diverse-frame-rate/: index.html
docker/: Dockerfile  dle.crt  docker-compose.yml  setup_env_docker.sh
docs/: concepts.md  configuration.md  credits.md  diverse-frame-rate.md  gen_credits.py  gen_ref_nav.py  install.md  update_mkdocs_for_source.py
docs/css/: mkdocstrings.css
docs/evaluation_framework/: quickstart_guide.md  user_guide.md
docs/tasks/: docking_1d.md
install/: index.html
license/: index.html
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/train_rl/: index.html
scripts/: build.py  piplock_tool.py  setup_env_docker.sh  valid_words.txt
scripts/codeserver/: default_code_server_plugins.txt  entrypoint.sh  install_code_server_plugins.sh
search/: search_index.json
tasks/docking_1d/: index.html
test/: conftest.py  test_mkdocs.py
test/benchmark_experiment/: test_benchmark_experiment.py
test/episode_parameter_providers/: test_core.py
test/evaluation/: test_evaluation_api.py
test/fixture_files/: basic_agent_class.yml
test/full_training_test/: experiment_env_test.py  full_training_test.py  offline_training_test.py
test/full_training_test_w_eval/: full_training_w_eval.py  full_training_w_eval_test.py  policy_network_viz_test.py
test/glues/: glue_test_utils.py  test_common.py  test_observe_sensor.py  test_observe_sensor_repeated.py  test_target_value_difference.py
test/gpu/: test_gpus.py
test/libraries/: test_env_space_util.py  test_file_path.py  test_functor.py  test_nan_check.py  test_normalization.py  test_observation_util.py  test_parameters.py  test_plugin_library.py  test_properties.py  test_units.py  test_ureg.py
test/parsers/: test_parsers.py
test/simulators/: test_base_parts.py  test_part_prop_override.py
test/six_dof/: test_six_dof_properties.py
test/validators/: test_base_agent_class.py  test_glue_class.py
(+465 files in other folders)
